<resources>
    <string name="app_name">CFT</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="enter_hint">Enter the first digits of a card number</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="prepaid">PREPAID</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="bank_address">BANK NAME AND CITY</string>
    <string name="web_site">WEB-SITE</string>
    <string name="type">TYPE</string>
    <string name="country">COUNTRY</string>
    <string name="bank_number">BANK NUMBER</string>
    <string name="empty">-</string>
    <string name="two_empty">-,-</string>
    <string name="clear">CLEAR</string>
    <string name="refresh">REFRESH</string>
    <string name="no_internet_connection">Problems with internet connection</string>
    <string name="clear_search_history">CLEAR SEARCH HISTORY</string>
    <string name="u">23</string>
</resources>