<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bin_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="10dp"
    app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
    app:layout_constraintTop_toBottomOf="@+id/search_btn">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bin_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bin_digits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scheme_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/country_box"
        app:layout_constraintEnd_toStartOf="@+id/country_box"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bin_box"
        app:layout_constraintTop_toBottomOf="@+id/bin_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/scheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/scheme_network"
            android:text="@string/empty" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brand_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/lat_lon"
        app:layout_constraintEnd_toEndOf="@+id/scheme_box"
        app:layout_constraintStart_toStartOf="@+id/scheme_box"
        app:layout_constraintTop_toBottomOf="@+id/scheme_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/brand"
            android:text="@string/empty" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/card_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/address_box"
        app:layout_constraintEnd_toEndOf="@+id/brand_box"
        app:layout_constraintStart_toStartOf="@+id/brand_box"
        app:layout_constraintTop_toBottomOf="@+id/brand_box">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/length_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/length"
                android:inputType="numberDecimal"
                android:text="@string/empty" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/luhn_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/luhn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/luhn"
                android:inputType="numberDecimal"
                android:text="@string/empty" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/site_box"
        app:layout_constraintEnd_toEndOf="@+id/card_number"
        app:layout_constraintStart_toStartOf="@+id/card_number"
        app:layout_constraintTop_toBottomOf="@+id/card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/type"
            android:text="@string/empty" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prepaid_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/phone_box"
        app:layout_constraintEnd_toEndOf="@+id/type_box"
        app:layout_constraintStart_toStartOf="@+id/type_box"
        app:layout_constraintTop_toBottomOf="@+id/type_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prepaid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/prepaid"
            android:text="@string/empty" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scheme_box"
        app:layout_constraintTop_toBottomOf="@+id/bin_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/country"
            android:text="@string/empty" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lat_lon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/country_box"
        app:layout_constraintStart_toStartOf="@+id/country_box"
        app:layout_constraintTop_toBottomOf="@+id/country_box">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/latitude"
                android:inputType="numberDecimal"
                android:text="@string/empty" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitude_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/longitude"
                android:inputType="numberDecimal"
                android:text="@string/empty" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/lat_lon"
        app:layout_constraintStart_toStartOf="@+id/lat_lon"
        app:layout_constraintTop_toBottomOf="@+id/lat_lon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/bank_address"
            android:text="@string/two_empty" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/site_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/address_box"
        app:layout_constraintStart_toStartOf="@+id/address_box"
        app:layout_constraintTop_toBottomOf="@+id/address_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/web_site"
            android:text="@string/empty" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/site_box"
        app:layout_constraintStart_toStartOf="@+id/site_box"
        app:layout_constraintTop_toBottomOf="@+id/site_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/bank_number"
            android:text="@string/empty" />


    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>